--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="./css/vendor/normalize.css"> -->
+    <link rel="stylesheet" href="../css/main.css">
+
+<!-- <script src="./js/jquery-3.3.1.min.js"></script> -->
     <title>INICIO</title>
   </head>
   <body>
@@ -81,15 +87,26 @@
         </a>
       </div>
 
-
-    <section class="container">
+    <!-- <article class="index-article bg-lightgray">
+     <section class="container">
       <h2 class="display-4 text-center">Nosotros</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
       </p>
-    </section>
+     </section>
+    <img src="../img/roll-2.jpg" alt="" class="img-responsive" style="display:inline">
+  </article> -->
 
-    <div class="static-background" id="static-1"></div>
+  <!-- <div class="static-background" id="static-1"></div> -->
+
+  <section class="container">
+    <h2 class="display-4 text-center">Nosotros</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+    </p>
+  </section>
+
+    <div class="static-background" id="static-2"></div>
 
     <section class="container">
       <h2 class="display-4 text-center">Historia</h1>
@@ -98,16 +115,9 @@
       </p>
     </section>
 
-    <div class="static-background" id="static-2"></div>
-
-    <section class="container">
-      <h2 class="display-4 text-center">Eventos</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
-      </p>
-    </section>
-
     <div class="static-background" id="static-3"></div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
