--- a/views/admin/administrador/index.html
+++ b/views/admin/administrador/index.html
@@ -54,28 +54,22 @@
       </div>
       <br>
 
-      <table class="table table-striped">
+      <table id="tabla" class="table table-striped">
         <thead>
           <tr>
             <th scope="col"></th>
-            <th scope="col">Email</th>
             <th scope="col">Usuario</th>
+            <th scope="col">Contraseña</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>
-              <input type="checkbox" name="selected" value="<%-i%>" data-type="administrador">
-            </td>
-            <td>Email</td>
-            <td>Usuario</td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+    <!--script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script-->
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
