--- a/views/admin/administrador/vista.html
+++ b/views/admin/administrador/vista.html
@@ -38,24 +38,34 @@
     <section class="container">
       <form>
         <div class="form-group">
+          <label for="nombre">Nombre de usuario:</label>
+          <input type="text" class="form-control-plaintext" id="username" placeholder="Usuario" data-type="usuario" readonly>
+        </div>
+        <div class="form-group">
+          <label for="name">Nombre(s):</label>
+          <input type="text" class="form-control-plaintext" id="name" placeholder="Nombre(s)" data-type="nombre" readonly>
+        </div>
+        <div class="form-group">
+          <label for="last_name">Apellido(s):</label>
+          <input type="text" class="form-control-plaintext" id="last_name" placeholder="Apellido(s)" data-type="nombre" readonly>
+        </div>
+        <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" readonly="true">
+          <input type="email" class="form-control-plaintext" id="email" placeholder="Email" data-type="correo" readonly>
         </div>
         <div class="form-group">
-          <label for="nombre-usuario">Nombre de Usuario:</label>
-          <input type="text" class="form-control" id="nombre-usuario" value="Fernando" readonly="true">
-        </div>
-        <div class="form-group">
-          <label for="contrasena">Contraseña:</label>
-          <input type="password" class="form-control" id="contrasena" value="********" readonly="true">
+          <label for="phone">Telefono:</label>
+          <input type="email" class="form-control-plaintext" id="phone" placeholder="Telefono" data-type="numero" readonly>
         </div>
       </form>
     </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="../../../js/views/admin/administrador/vista.js" type="text/javascript"></script>
   </body>
 </html>
