--- a/views/admin/evento/editar.html
+++ b/views/admin/evento/editar.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>EVENTO/EDITAR</title>
   </head>
   <body>
@@ -38,73 +40,54 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="email">Cliente Email: <span class="req">*</span></label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" data-type="email" required>
-        </div>
-        <label for="paquete">Paquete: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon3">Paquete #</span>
-          </div>
-          <input type="number" class="form-control" id="paquete" value="3" required>
+          <label for="client">Cliente: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="client" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="fehca-hora-inicio">Fecha y Hora de Inicio: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-inicio" value="2018-08-15T20:30" required>
+          <label for="dateStart">Fecha Inicio: <span class="req">*</span></label>
+          <input type="date" class="form-control" id="dateStart" data-type="fecha">
         </div>
         <div class="form-group">
-          <label for="fehca-hora-fin">Fecha y Hora de Fin: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-fin" value="2018-08-16T03:30" required>
+          <label for="dateEnd">Fecha Fin: <span class="req">*</span></label>
+          <input type="date" class="form-control" id="dateEnd" data-type="fecha">
         </div>
         <div class="form-group">
-          <label for="cant-personas">Cantidad de Personas: <span class="req">*</span></label>
-          <input type="number" class="form-control" id="cant-personas" value="50" required>
+          <label for="persons">Numero de Personas: <span class="req">*</span></label>
+          <input type="number" class="form-control" id="persons" data-type="numero">
         </div>
-        <label for="costo-persona-adicional">Costo por Persona Adicional: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="costo-persona-ad" value="80" required>
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <label for="cantidad-anticipo">Cantidad de Anticipo: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="cantidad-anticipo" value="500" required>
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <label for="costo-total">Costo Total: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="costo-total" value="1500" required>
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
+        <button type="button" id="submit" class="btn btn-primary">Editar</button>
+      </form>
+      <br><br>
+      <form>
         <div class="form-group">
-          <label for="servicios-adicionales">Servicios adicionales:</label>
-          <input type="text" class="form-control" id="servicios-adicionales" value="N/A">
+          <label for="package_id">Seleccione Paquete:</label>
+          <select class="form-control" id="package_id">
+            <option value="0">Seleccione un Paquete...</option>
+          </select>
         </div>
-        <button type="submit" class="btn btn-primary">Editar</button>
+        <button type="button" id="submit_package" class="btn btn-primary">Agregar Paquete</button>
+      </form>
+      <br><br>
+      <form>
+        <div class="form-group">
+          <label for="package_id_borrar">Seleccione Paquete:</label>
+          <select class="form-control" id="package_id_borrar">
+            <option value="0">Seleccione un Paquete...</option>
+          </select>
+        </div>
+        <button type="button" id="submit_package_borrar" class="btn btn-primary">Borrar Paquete</button>
       </form>
     </section>
     <br><br><br><br>
 
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <!-- Optional JavaScript -->
-    <script src="../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/evento/editar.js" type="text/javascript"></script>
   </body>
 </html>
