--- a/views/admin/evento/index.html
+++ b/views/admin/evento/index.html
@@ -7,7 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>EVENTOS</title>
   </head>
   <body>
@@ -55,41 +56,28 @@
       </div>
       <br>
 
-      <table class="table table-striped">
+      <table id="tabla" class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Fecha</th>
-            <th scope="col">Cliente</th>
-            <th scope="col">Costo total</th>
-            <th scope="col">Estatus</th>
-            <th scope="col">Anticipo</th>
-            <th scope="col">Acción</th>
+            <th scope="col"></th>
+            <th scope="col">Fecha Inicio</th>
+            <th scope="col">Fecha Fin</th>
+            <th scope="col">Personas</th>
           </tr>
         </thead>
-        <tbody>
-          <!-- <% for(var i = 0; i < 15; i++) { %> -->
-          <tr>
-            <td>
-              <input type="checkbox" name="selected" value="<%-i%>" data-type="evento">
-            </td>
-            <td>27/03/2018 03:00pm</td>
-            <td>Fernando Mayorga Rojas</td>
-            <td>$1500</td>
-            <td>Apartado</td>
-            <td>$500</td>
-          </tr>
-          <!-- <% } %> -->
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <!-- Optional JavaScript -->
-    <script src="../js/lista.js" type="text/javascript"></script>
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../../../js/md5.min.js" type="text/javascript"></script>
+    <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/evento/index.js" type="text/javascript"></script>
   </body>
 </html>
