--- a/views/admin/evento/vista.html
+++ b/views/admin/evento/vista.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>EVENTO/VISTA</title>
   </head>
   <body>
@@ -38,61 +40,20 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="email">Cliente Email: <span class="req">*</span></label>
-          <input type="email" class="form-control" id="email" value="fernando@gmail.com" readonly="true">
-        </div>
-        <label for="paquete">Paquete: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon3">Paquete #</span>
-          </div>
-          <input type="number" class="form-control" id="paquete" value="3" readonly="true">
+          <label for="client">Cliente: <span class="req">*</span></label>
+          <input type="text" class="form-control-plaintext" id="client" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="fehca-hora-inicio">Fecha y Hora de Inicio: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-inicio" value="2018-08-15T20:30" readonly="true">
+          <label for="dateStart">Fecha Inicio: <span class="req">*</span></label>
+          <input type="date" class="form-control-plaintext" id="dateStart" data-type="fecha" readonly>
         </div>
         <div class="form-group">
-          <label for="fehca-hora-fin">Fecha y Hora de Fin: <span class="req">*</span></label>
-          <input type="datetime-local" class="form-control" id="fehca-hora-fin" value="2018-08-16T03:30" readonly="true">
+          <label for="dateEnd">Fecha Fin: <span class="req">*</span></label>
+          <input type="date" class="form-control-plaintext" id="dateEnd" data-type="fecha" readonly>
         </div>
         <div class="form-group">
-          <label for="cant-personas">Cantidad de Personas: <span class="req">*</span></label>
-          <input type="number" class="form-control" id="cant-personas" value="50" readonly="true">
-        </div>
-        <label for="costo-persona-adicional">Costo por Persona Adicional: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="costo-persona-ad" value="80" readonly="true">
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <label for="cantidad-anticipo">Cantidad de Anticipo: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="cantidad-anticipo" value="500" readonly="true">
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <label for="costo-total">Costo Total: <span class="req">*</span></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="text" class="form-control" id="costo-total" value="1500" readonly="true">
-          <div class="input-group-append">
-            <span class="input-group-text">.00</span>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="servicios-adicionales">Servicios adicionales:</label>
-          <input type="text" class="form-control" id="servicios-adicionales" value="N/A" readonly="true">
+          <label for="persons">Numero de Personas: <span class="req">*</span></label>
+          <input type="number" class="form-control-plaintext" id="persons" data-type="numero" readonly>
         </div>
       </form>
     </section>
@@ -101,36 +62,28 @@
     <br>
 
     <section class="container">
-      <table class="table table-striped">
+      <table id="tablaPaquetes" class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Numero de paquete</th>
-            <th scope="col">Costo</th>
-            <th scope="col">Fecha y hora de inicio</th>
-            <th scope="col">Fecha y hora de fin</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Descripcion</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>3</td>
-            <td>$20,000</td>
-            <td>27/03/2018 03:00pm</td>
-            <td>27/03/2018 09:00pm</td>
-            <td>
-              <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="../paquetes/index.html"><img src="../../../img/iconos/eye-2x.png" alt=""></a></li>
-              </ul>
-            </td>
-          </tr>
-        </tbody>
+        <tbody></tbody>
       </table>
     </section>
 
     <br><br><br><br>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../../../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../../../js/md5.min.js" type="text/javascript"></script>
+    <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/views/admin/evento/vista.js" type="text/javascript"></script>
   </body>
 </html>
